# learn_cmake

t1/: CMakeLists.txt  main.c
t2/: CMakeLists.txt  README
t2/doc/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.h
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
