SET(LIBHELLO_SRC hello.c)
#SHARED,动态库 STATIC,静态库
ADD_LIBRARY(hello SHARED ${LIBHELLO_SRC})
#添加动态库版本号
SET_TARGET_PROPERTIES(hello PROPERTIES VERSION 1.2 SOVERSION 1)
ADD_LIBRARY(hello_static STATIC ${LIBHELLO_SRC})
SET_TARGET_PROPERTIES(hello_static PROPERTIES OUTPUT_NAME "hello")
#安装共享库和头文件
INSTALL(TARGETS hello hello_static
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)
INSTALL(FILES hello.h DESTINATION include/hello)
